Improving the Print Adapter
* Add better namespace support
* Add documentation
* Add test cases (minimal)
* Add functionality